--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <header>
     <div class="logo-container">
-      <img src="/assets/logos/logo.png" alt="Eagle Company Logo">
+      <img src="assets/logos/logo.png" alt="Eagle Company Logo">
       <h1>Eagle Operator</h1>
     </div>
     <nav>
