--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       </div>
     </div>
   </footer>
-  
-  <script src="scripts/main.js" type="module" defer></script>
+  <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
