--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soldats - Eagle Operator</title>
   <link href="../styles/global.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -216,14 +217,6 @@
       </section>
     </div>
   </main>
-  <script src="../scripts/modalManager.js" type="module"></script>
-  <script type="module">
-    import { startApp } from '../scripts/modalManager.js';
-    // Initialiser l'application au chargement de la page
-    document.addEventListener('DOMContentLoaded', () => {
-      startApp();
-    });
-  </script>
   <footer>
     <a href="dashboard.html">Dashboard</a>
   </footer>
@@ -254,5 +247,13 @@
     <textarea id="soldat-notes" placeholder="Notes"></textarea>
     <button type="submit" class="btn btn-primary">Sauvegarder</button>
   </form>
+
+  <!-- Scripts -->
+  <script type="module" src="../scripts/dataManager.js"></script>
+  <script type="module" src="../scripts/modalManager.js"></script>
+  <script type="module">
+    import { startApp } from '../scripts/modalManager.js';
+    document.addEventListener('DOMContentLoaded', startApp);
+  </script>
 </body>
 </html>
