--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -221,19 +221,12 @@
     <a href="dashboard.html">Dashboard</a>
   </footer>
 
-  <div id="modal-soldat" class="modal hidden">
+  <!-- Modale Soldat (invisible par défaut) -->
+  <div id="modal-soldat" class="modal" style="display:none;">
     <div class="modal-content">
-      <div class="modal-header">
-        <h2 id="modal-soldat-nom">Nom du soldat</h2>
-        <span id="modal-soldat-id" class="badge"></span>
-        <span class="modal-close">&times;</span>
-      </div>
-      <div class="modal-body">
-        <!-- Infos remplies dynamiquement -->
-      </div>
-      <div class="modal-footer">
-        <button id="btn-close-modal" class="btn btn-secondary">Fermer</button>
-      </div>
+      <span class="modal-close">&times;</span>
+      <div class="modal-body"></div>
+      <button id="btn-close-modal">Fermer</button>
     </div>
   </div>
 
