Add modal manager script to soldat page

--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -223,7 +223,12 @@
 
   <!-- Scripts -->
   <script type="module" src="../scripts/dataManager.js"></script>
+  <script type="module" src="../scripts/modalManager.js"></script>
   <script type="module" src="../scripts/soldatsManager.js"></script>
+  <script type="module">
+    import { startApp } from '../scripts/modalManager.js';
+    document.addEventListener('DOMContentLoaded', startApp);
+  </script>
   <script type="module">
     import { startApp } from '../scripts/soldatsManager.js';
     document.addEventListener('DOMContentLoaded', startApp);
