--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -224,14 +224,14 @@
   <!-- Scripts -->
   <script type="module" src="../scripts/dataManager.js"></script>
   <script type="module" src="../scripts/modalManager.js"></script>
-  <script type="module" src="../scripts/soldatsManager.js"></script>
+  <script type="module" src="../scripts/hrManager.js"></script>
   <script type="module">
     import { startApp } from '../scripts/modalManager.js';
     document.addEventListener('DOMContentLoaded', startApp);
   </script>
   <script type="module">
-    import { startApp } from '../scripts/soldatsManager.js';
-    document.addEventListener('DOMContentLoaded', startApp);
+    import { initHR } from '../scripts/hrManager.js';
+    document.addEventListener('DOMContentLoaded', initHR);
   </script>
 </body>
 </html>
