Load env before other scripts

--- a/pages/formations.html
+++ b/pages/formations.html
@@ -221,6 +221,7 @@
   </main>
 
   <!-- Scripts -->
+  <script src="../data/env.js"></script>
   <script type="module" src="../scripts/dataManager.js"></script>
   <script type="module" src="../scripts/modalManager.js"></script>
   <script type="module">
