--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -222,6 +222,7 @@
   </footer>
 
   <!-- Scripts -->
+  <script src="../data/env.js"></script>
   <script type="module" src="../scripts/dataManager.js"></script>
   <script type="module" src="../scripts/modalManager.js"></script>
   <script type="module" src="../scripts/soldatsManager.js"></script>
