--- a/pages/unites.html
+++ b/pages/unites.html
@@ -211,6 +211,7 @@
   </footer>
 
   <!-- Scripts -->
+  <script src="../data/env.js"></script>
   <script type="module" src="../scripts/dataManager.js"></script>
   <script type="module" src="../scripts/unitesManager.js"></script>
   <script type="module">
