--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
     </div>
   </footer>
+  <script src="config.js"></script>
   <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
