Center pages with container

--- a/pages/soldats.html
+++ b/pages/soldats.html
@@ -13,7 +13,8 @@
     <h1><i class="fas fa-user-shield"></i> Gestion des soldats</h1>
   </header>
   <main>
-    <div class="app-container">
+    <div class="container">
+      <div class="app-container">
       <!-- Section filtres -->
       <section class="soldats-section" id="filtres">
         <h2><i class="fas fa-filter"></i> Filtres</h2>
@@ -215,6 +216,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
   </main>
   <footer>
