--- a/pages/unites.html
+++ b/pages/unites.html
@@ -13,7 +13,8 @@
     <h1><i class="fas fa-sitemap"></i> Gestion des unités</h1>
   </header>
   <main>
-    <div class="app-container">
+    <div class="container">
+      <div class="app-container">
       <!-- Section actions -->
       <div class="actions-bar">
         <div>
@@ -204,6 +205,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
   </main>
   <footer>
