--- a/pages/admin.html
+++ b/pages/admin.html
@@ -12,7 +12,11 @@
     <h1>Administration</h1>
   </header>
   <main>
-    <section id="admin-panel"></section>
+    <div class="container">
+      <div class="app-container">
+        <section id="admin-panel"></section>
+      </div>
+    </div>
   </main>
   <footer>
     <a href="dashboard.html">Dashboard</a>
