--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -12,8 +12,9 @@
     <h1>Dashboard Eagle Operator</h1>
   </header>
   <main>
-    <div class="app-container">
-      <h1><i class="fas fa-tachometer-alt"></i> Tableau de bord tactique</h1>
+    <div class="container">
+      <div class="app-container">
+        <h1><i class="fas fa-tachometer-alt"></i> Tableau de bord tactique</h1>
       
       <!-- Alertes section -->
       <section class="dashboard-section" id="alertes">
@@ -158,6 +159,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
   </main>
   <footer>
