--- a/pages/formations.html
+++ b/pages/formations.html
@@ -13,7 +13,8 @@
     <h1><i class="fas fa-graduation-cap"></i> Gestion des formations</h1>
   </header>
   <main>
-    <div class="app-container">
+    <div class="container">
+      <div class="app-container">
       <!-- Section filtres -->
       <section class="missions-section" id="filtres">
         <h2><i class="fas fa-filter"></i> Filtres</h2>
@@ -217,6 +218,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
   </main>
 
