--- a/pages/missions.html
+++ b/pages/missions.html
@@ -13,7 +13,8 @@
     <h1><i class="fas fa-flag"></i> Gestion des missions</h1>
   </header>
   <main>
-    <div class="app-container">
+    <div class="container">
+      <div class="app-container">
       <!-- Section filtres -->
       <section class="missions-section" id="filtres">
         <h2><i class="fas fa-filter"></i> Filtres</h2>
@@ -228,6 +229,7 @@
           </div>
         </div>
       </section>
+      </div>
     </div>
   </main>
   <footer>
