Améliore la page unités et le footer

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div id="app-root" class="container"></div>
   </main>
 
-  <footer>
+  <footer class="site-footer">
     <div class="container">
       <div class="footer-content">
         <p>&copy; 2025 Eagle Company | Plateforme tactique Eagle Operator</p>
         <div class="footer-links">
-          <a href="#contact">Contact</a> | 
-          <a href="#support">Support</a> | 
+          <a href="#contact">Contact</a>
+          <a href="#support">Support</a>
           <a href="#confidentialite">Confidentialité</a>
         </div>
       </div>
