--- a/pages/admin.html
+++ b/pages/admin.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="site-footer">
     <a href="dashboard.html">Dashboard</a>
   </footer>
 </body>
