--- a/pages/formations.html
+++ b/pages/formations.html
@@ -221,6 +221,9 @@
       </div>
     </div>
   </main>
+  <footer class="site-footer">
+    <a href="dashboard.html">Dashboard</a>
+  </footer>
 
   <!-- Scripts -->
   <script type="module" src="../scripts/dataManager.js"></script>
