--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -162,7 +162,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="site-footer">
     <a href="../index.html">Accueil</a>
   </footer>
 </body>
