--- a/pages/missions.html
+++ b/pages/missions.html
@@ -232,7 +232,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="site-footer">
     <a href="dashboard.html">Dashboard</a>
   </footer>
 
