--- a/pages/unites.html
+++ b/pages/unites.html
@@ -23,6 +23,7 @@
           <button id="btn-collapse-all" class="btn"><i class="fas fa-compress-alt"></i> Tout replier</button>
         </div>
         <div class="info-display">
+          <input type="text" id="search-unite" class="search-input" placeholder="Recherche...">
           <span id="unites-count" class="badge badge-warning">5 unités</span>
         </div>
       </div>
@@ -175,32 +176,36 @@
                   <div class="stat-label">Formations</div>
                 </div>
               </div>
-              
-              <div class="unit-members">
-                <h4><i class="fas fa-users"></i> Membres</h4>
-                <ul class="members-list">
-                  <li>
-                    <span class="member-name">ICEMAN</span>
-                    <span class="member-grade">Caporal-chef</span>
-                    <span class="member-role">Chef d'unité</span>
-                  </li>
-                  <li>
-                    <span class="member-name">FURY</span>
-                    <span class="member-grade">Caporal</span>
-                    <span class="member-role">Opérateur</span>
-                  </li>
-                  <li>
-                    <span class="member-name">OLIVE</span>
-                    <span class="member-grade">Soldat Première Classe</span>
-                    <span class="member-role">Opérateur</span>
-                  </li>
-                  <li>
-                    <span class="member-name">RECRUE1</span>
-                    <span class="member-grade">Recrue</span>
-                    <span class="member-role">En formation</span>
-                  </li>
-                </ul>
-              </div>
+            </div>
+          </div>
+
+          <div class="unit-card">
+            <div class="unit-card-header">
+              <h3>Membres</h3>
+            </div>
+            <div class="unit-card-content">
+              <ul class="members-list">
+                <li>
+                  <span class="member-name">ICEMAN</span>
+                  <span class="member-grade">Caporal-chef</span>
+                  <span class="member-role">Chef d'unité</span>
+                </li>
+                <li>
+                  <span class="member-name">FURY</span>
+                  <span class="member-grade">Caporal</span>
+                  <span class="member-role">Opérateur</span>
+                </li>
+                <li>
+                  <span class="member-name">OLIVE</span>
+                  <span class="member-grade">Soldat Première Classe</span>
+                  <span class="member-role">Opérateur</span>
+                </li>
+                <li>
+                  <span class="member-name">RECRUE1</span>
+                  <span class="member-grade">Recrue</span>
+                  <span class="member-role">En formation</span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -208,7 +213,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="site-footer">
     <a href="dashboard.html">Dashboard</a>
   </footer>
 
